@@ -59,6 +59,7 @@
 43. Japanese translation.
 44. Allow single-key shortcuts.
 45. Improve Mopidy support.
+46. Enable support for Opus tags if enabled in TagLib.
 
 2.0.1
 -----
